--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "autoprefixer": "^10.3.2",
+    "nodemon": "^2.0.12",
+    "postcss": "^8.3.6"
   }
 }
